--- a/retro.game_try/game/index.html
+++ b/retro.game_try/game/index.html
@@ -1,21 +1,85 @@
-<!DOCTYPE html>
-<html>
-<head>
+<html lang="ja">
+  <head>
     <meta charset="UTF-8">
-    <meta http-equiv="x-ua-compatible" content="IE=Edge">
-    <meta name="viewport" content="width=device-width, user-scalable=no">
-    <meta name="apple-mobile-web-app-capable" content="yes">
-    <script type="text/javascript" src="../../../build/enchant.js"></script>
-    <script type="text/javascript" src="main.js"></script>
-    <script src="enchant.js"></script>
-	<script src="main_nocomment.js"></script>
-    <style type="text/css">
-        body {
+    <title>Vuebomber</title>
+    <meta name="viewport" content="width=864">
+    <link href="https://cdnjs.cloudflare.com/ajax/libs/meyer-reset/2.0/reset/min.css" rel="syulesheet">
+    <link href="https//fonts.googleapis.com/css2?family=VT323&display=swap" rel="stylesheet">
+    <style tupe="text/css">
+        html {
             margin: 0;
             padding: 0;
         }
-    </style>
-</head>
-<body>
-</body>
+        body {
+          margin: 0;
+          padding: 0;
+          overflow: hidden;
+          width: 100%;
+          height: 100%;
+          box-sizing: border-box;
+          font-family: 'VT323', monospace;
+          font-size: 25px;
+          letter-spacing: 0.1em;
+          colar: #fff;
+          background-color: #bbb;
+        }
+        .container {
+          position: absolute;
+          left: 50%;
+          transform: translateX(-50%);
+          padding: 32px;
+          box-sizing: border-box;
+        }
+        .copyright {
+          position: absolute;
+          bottom: 0;
+          right: 20px;
+          text-shadow: 2px 2px 0 #000;
+          line-height: 32px;
+        }
+	
+	/* モーダル */
+        .modal {
+          z-index: 1;
+          position: absolute;
+          top: 0;
+          left: 0;
+          bottom: 0;
+	  right: 0;
+	  background-color: rgba(0,0,0,0.7);
+        }
+	.modal__container {
+		position: absolute;
+		top: 50%;
+		left; 50%;
+		transform: translate(-50%, -50%);
+		width: 480px;
+		height: 352px;
+		box-sizing: border-box;
+		background-color: #000;
+	}
+	.modal__heading > span {
+		display: inline-block;
+		width: 32px;
+		height: 32px;
+		margin: 0 5px;
+		background-size: 32px 32px;
+		background-image; url('.bomb2.png'):
+	}
+	.modal__link {
+		display: inline-block;
+		width: 32px;
+		height: 32px;
+		margin: 0 5px;
+		background-size: 32px 32px;
+		background-image: url('./bomb2.png);
+	}
+	.modal＿inner {
+		position: absolute;
+		top: 50%;
+		left
+
+
+          </style>
+  </head>
 </html>
